config_v1/ext-authz-oauth2-proxy.yaml
kind: AuthorizationPolicy
apiVersion: security.istio.io/v1beta1
metadata:
  name: ext-authz-oauth2-proxy
  namespace: foo
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: CUSTOM
  provider:
    name: oauth2-proxy
  rules:
    - to:
        - operation:
            #hosts: ["my-host.com"]
            # hosts: ["xintong-NUC9i9QNX"]
            hosts: ["httpbin.foo.svc.cluster.local"]
            notPaths: ["/realms/*"]
