config_v1/requestAuthen.bad.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: foo
spec:
  selector:
    matchLabels:
      istio: ingressgateway 
  action: ALLOW
  rules:
  - from:
    - source:
       requestPrincipals: ["http://10.23.16.38:30802/realms/my-realm/c9a09dd0-7a8c-4c7d-81e4-0194f944a963"]
